--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Learning git and version control</h1>
     <p>Hellow para</p>
+    <div>
+        <p>Hello this is div</p>
+    </div>
 </body>
 </html>
