--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Learning git and version control</h1>
+    <h1>Learning git and github</h1>
 </body>
 </html>
