change version control to in depth

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Learning git and version control</h1>
+    <h1>Learning git in depth</h1>
     <p>Hellow para</p>
     <div>
         <p>Hello this is div</p>
